force-app/main/default/objects/ssot__HealthcareProviderSpecialty__dlm/fields/ssot__ActiveResearchStudyCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActiveResearchStudyCount__c</fullName>
    <label>Active Research Study Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActiveResearchStudyCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>