force-app/main/default/objects/ssot__HealthcareProviderSpecialty__dlm/fields/ssot__HealthcareProviderId__c.field-meta.xml
<CustomField>
    <fullName>ssot__HealthcareProviderId__c</fullName>
    <label>Healthcare Provider Id</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HealthcareProviderId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>