force-app/main/default/objects/ssot__HealthcareProviderSpecialty__dlm/fields/ssot__IsPrimarySpecialty__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsPrimarySpecialty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Specialty</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsPrimarySpecialty</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>