force-app/main/default/objects/ssot__HealthcareProviderSpecialty__dlm/fields/ssot__rel_1716725806637_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716725806637_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HealthcareProviderSpecialty_Healthca_rel</label>
    <referenceTo>ssot__HealthcareProvider__dlm</referenceTo>
    <relationshipLabel>HealthcareProviderSpecialty_Healthca_rel</relationshipLabel>
    <relationshipName>rel_1716725806637_end</relationshipName>
    <type>Lookup</type>
</CustomField>