force-app/main/default/objects/ssot__HealthcareProviderSpecialty__dlm/fields/ssot__rel_1742275300379_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1742275300379_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HealthcareProviderSpecialty_CareSpec_rel</label>
    <referenceTo>ssot__CareSpecialty__dlm</referenceTo>
    <relationshipLabel>HealthcareProviderSpecialty_CareSpec_rel</relationshipLabel>
    <relationshipName>rel_1742275300379_end</relationshipName>
    <type>Lookup</type>
</CustomField>