force-app/main/default/objects/ssot__HealthcareProviderSpecialty__dlm/fields/ssot__SupportedResearchStudyPhase__c.field-meta.xml
<CustomField>
    <fullName>ssot__SupportedResearchStudyPhase__c</fullName>
    <label>Supported Research Study Phase</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SupportedResearchStudyPhase</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>